--- a/WeatherPy(1).ipynb
+++ b/WeatherPy(1).ipynb
@@ -1401,8 +1401,8 @@
     "\n",
     "\n",
     "# Create data frame with aggregated data\n",
-    "weather_data = pd.DataFrame({\"City Name\":cityList,\n",
-    "                            \"Country\":countryList,\n",
+    "weather_data = pd.DataFrame({\"City Name\":city_list,\n",
+    "                            \"Country\":country_list,\n",
     "                            \"Latitude\":lat_data,\n",
     "                            \"Longitude\":lng_data,\n",
     "                            \"Temperature\":temp_data,\n",
