--- a/WeatherPy(1).ipynb
+++ b/WeatherPy(1).ipynb
@@ -1445,7 +1445,7 @@
     "# Build a scatter plot for each data type\n",
     "\n",
     "# Latitude vs Max Temp\n",
-    "plt.scatter(weather_data[\"lat\"], weather_data[\"temp\"], marker=\"o\")\n",
+    "plt.scatter(weather_data[\"Latitude\"], weather_data[\"Temperature\"], marker=\"o\")\n",
     "\n",
     "# Add chart labels\n",
     "plt.title(\"City Latitude vs Max Temperature\")\n",
@@ -1475,7 +1475,7 @@
    "outputs": [],
    "source": [
     "# Latitude vs Humidity\n",
-    "plt.scatter(weather_data[\"lat\"], weather_data[\"humidity\"], marker=\"o\")\n",
+    "plt.scatter(weather_data[\"Latitude\"], weather_data[\"Humidity\"], marker=\"o\")\n",
     "\n",
     "# Add chart labels\n",
     "plt.title(\"City Latitude vs Humidity\")\n",
@@ -1505,7 +1505,7 @@
    "outputs": [],
    "source": [
     "# Latitude vs Cloudiness\n",
-    "plt.scatter(weather_data[\"lat\"], weather_data[\"cloudiness\"], marker=\"o\")\n",
+    "plt.scatter(weather_data[\"Latitude\"], weather_data[\"Cloudiness\"], marker=\"o\")\n",
     "\n",
     "# Add chart labels\n",
     "plt.title(\"City Latitude vs Cloudiness\")\n",
@@ -1535,7 +1535,7 @@
    "outputs": [],
    "source": [
     "# Latitude vs Wind Speed\n",
-    "plt.scatter(weather_data[\"lat\"], weather_data[\"winds\"], marker=\"o\")\n",
+    "plt.scatter(weather_data[\"Latitude\"], weather_data[\"Winds\"], marker=\"o\")\n",
     "\n",
     "# Add chart labels\n",
     "plt.title(\"City Latitude vs Wind Speed\")\n",
